--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -443,9 +443,19 @@ jobs:
           pwd
           ls -la build || true
           cd build
-          brew reinstall openssl
           ./../.CI/MacDeploy.sh
+
+          echo "Downloading kimageformats plugins"
+
+          brew reinstall openssl
+          curl -SsfLo kimg.zip "https://github.com/nerixyz/kimageformats-binaries/releases/download/cont/kimageformats-macos-latest-${{ matrix.qt-version}}.zip"
           ${{matrix.arch == 'arm64' && 'brew reinstall $(brew --cache --bottle-tag=arm64_monterey openssl)' || ''}}
+
+          echo "Extracting kimageformats plugins"
+          7z e -okimg kimg.zip
+          cp kimg/libKF5Archive.5.dylib chatterino.app/Contents/Frameworks/
+          cp kimg/kimg_avif.so chatterino.app/Contents/PlugIns/imageformats/
+
           ./../.CI/CreateDMG.sh
         shell: bash
 
