--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -297,7 +297,7 @@ jobs:
               -DCHATTERINO_PLUGINS="$C2_PLUGINS" \
               -DBUILD_WITH_QT6="$C2_BUILD_WITH_QT6" \
               -DCHATTERINO_NO_AVIF_PLUGIN=On \
-              -DCMAKE_OSX_ARCHITECTURES=arm64;x86_64 \
+              -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64" \
               ..
           make -j"$(sysctl -n hw.logicalcpu)"
         shell: bash
