--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -280,13 +280,11 @@ jobs:
       - name: Install dependencies (MacOS)
         if: startsWith(matrix.os, 'macos')
         run: |
-          brew install boost openssl rapidjson p7zip create-dmg cmake tree
+          # binary dependencies
+          ./.CI/SetupHomebrewDeps.sh boost openssl
+          # build and header-only dependencies
+          brew install rapidjson p7zip create-dmg cmake tree
         shell: bash
-
-      - if: startsWith(matrix.os, 'macos')
-        name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-        timeout-minutes: 15
 
       - name: Build (MacOS)
         if: startsWith(matrix.os, 'macos')
@@ -296,7 +294,6 @@ jobs:
           cmake \
               -DCMAKE_BUILD_TYPE=Release \
               -DCMAKE_OSX_DEPLOYMENT_TARGET=12.0 \
-              -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl \
               -DUSE_PRECOMPILED_HEADERS=OFF \
               -DCHATTERINO_LTO="$C2_ENABLE_LTO" \
               -DCHATTERINO_PLUGINS="$C2_PLUGINS" \
@@ -323,6 +320,27 @@ jobs:
           curl -SsfLo kimg.zip "https://github.com/nerixyz/kimageformats-binaries/releases/download/cont/kimageformats-macos-13-${{ matrix.qt-version}}.zip"
 
           ./../.CI/MacDeploy.sh
+
+          # Copy dynamic library dependencies into the Frameworks directory
+          cp /opt/universal-lib/libcrypto.dylib chatterino.app/Contents/Frameworks/libcrypto.3.dylib
+          cp /opt/universal-lib/libssl.dylib chatterino.app/Contents/Frameworks/libssl.3.dylib
+
+          # Fix the library IDs to match their new location
+          install_name_tool -id @executable_path/../Frameworks/libssl.3.dylib chatterino.app/Contents/Frameworks/libssl.3.dylib
+          install_name_tool -id @executable_path/../Frameworks/libcrypto.3.dylib chatterino.app/Contents/Frameworks/libcrypto.3.dylib
+
+          # Fix the search path for libcrypto in libssl
+          otool -L chatterino.app/Contents/Frameworks/libssl.3.dylib \
+            | grep libcrypto.3.dylib \
+            | cut -d" " -f1 \
+            | cut -f2 \
+            | while read input_crypto_dylib; do \
+                install_name_tool -change \
+                  "$input_crypto_dylib" \
+                  @executable_path/../Frameworks/libcrypto.3.dylib \
+                  chatterino.app/Contents/Frameworks/libssl.3.dylib; \
+              done
+
           ./../.CI/CreateDMG.sh
         shell: bash
 
@@ -332,6 +350,10 @@ jobs:
         with:
           name: chatterino-macos-Qt-${{ matrix.qt-version }}-universal.dmg
           path: build/chatterino-macos-Qt-${{ matrix.qt-version }}-universal.dmg
+
+      - if: startsWith(matrix.os, 'macos')
+        name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
 
       - if: startsWith(matrix.os, 'macos')
         name: Setup tmate session
