--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -281,7 +281,7 @@ jobs:
         if: startsWith(matrix.os, 'macos')
         run: |
           # binary dependencies
-          ./.CI/SetupHomebrewDeps.sh boost openssl
+          sudo ./.CI/SetupHomebrewDeps.sh boost openssl
           # build and header-only dependencies
           brew install rapidjson p7zip create-dmg cmake tree
         shell: bash
