--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -341,6 +341,18 @@ jobs:
                   @executable_path/../Frameworks/libcrypto.3.dylib \
                   chatterino.app/Contents/Frameworks/libssl.3.dylib; \
               done
+          # Fix the search path for lib{crypto,ssl} in chatterino
+          otool -L chatterino.app/Contents/MacOS/chatterino \
+            | grep /opt \
+            | cut -d" " -f1 \
+            | cut -f2 \
+            | while read og_entry; do \
+                echo $og_entry; \
+                install_name_tool -change \
+                  "$og_entry" \
+                  @executable_path/../Frameworks/$(echo $og_entry | sed -E 's/.*lib(ssl|crypto)/\1/') \
+                  chatterino.app/Contents/MacOS/chatterino; \
+              done
 
           ./../.CI/CreateDMG.sh
         shell: bash
